--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <link rel="icon" href="favicon.jpg" type="image/png">
+    <link rel="icon" href="kenji.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
