--- a/index.html
+++ b/index.html
@@ -97,11 +97,16 @@
     </div>
     <br><br>
     <footer>
-        <a class="diosito">Físicos Matemáticos</a><br>
-        <a class="mio" >Luis Dardón #6 <br>
-        Kenji García #7 <br>
-        Javier Sánchez #23<br>
-        Aldo Solís #24</a>
+        <div class="mio">
+            <div class="diosito">
+                <p class="powered">powered by</p>
+                <p>Físicos Matemáticos</p> 
+            </div>
+            <p>Luis Dardón #6</p>
+            <p>Kenji García #7</p>
+            <p>Javier Sánchez #23</p>
+            <p>Aldo Solís #24</p>
+        </div>
     </footer>
 </body>
 </html>
