--- a/primerob.html
+++ b/primerob.html
@@ -29,70 +29,70 @@
         </div>
         <div class="row odd">
             <div class="item">7:00-7:40</div>
-            <a href="https://zoom.us/j/98597983548?pwd=K2FhZkFZd3hyMGdSMlR5Y01hVURpdz09" target="_blank"><div class="item">Sociales</div></a>
-            <a href="https://zoom.us/j/97720900352?pwd=M3M4dzZLSWxRVnhNNklBV2NOZHVFUT09" target="_blank"><div class="item">O. Vida</div></a>
-            <a href="https://us04web.zoom.us/j/4256599767?pwd=bUliR20yK2hFdVd3YWRBTFdNU1lDUT09" target="_blank"><div class="item">Culturales</div></a>
-            <a href="https://zoom.us/j/91240387929?pwd=bnYvemVSU05qK0FKQU5NUmxMN2pYUT09" target="_blank"><div class="item">Matemáticas</div></a>
-            <a href="https://meet.google.com/gfq-qeiu-fsq?authuser=0" target="_blank"><div class="item">Experimentales</div></a>
+            <a href="https://zoom.us/j/98597983548?pwd=K2FhZkFZd3hyMGdSMlR5Y01hVURpdz09" target="_blank"><div class="item hover">Sociales</div></a>
+            <a href="https://zoom.us/j/97720900352?pwd=M3M4dzZLSWxRVnhNNklBV2NOZHVFUT09" target="_blank"><div class="item hover">O. Vida</div></a>
+            <a href="https://us04web.zoom.us/j/4256599767?pwd=bUliR20yK2hFdVd3YWRBTFdNU1lDUT09" target="_blank"><div class="item hover">Culturales</div></a>
+            <a href="https://zoom.us/j/91240387929?pwd=bnYvemVSU05qK0FKQU5NUmxMN2pYUT09" target="_blank"><div class="item hover">Matemáticas</div></a>
+            <a href="https://meet.google.com/gfq-qeiu-fsq?authuser=0" target="_blank"><div class="item hover">Experimentales</div></a>
         </div>
         <div class="row even">
             <div class="item">7:50-8:30</div>
-            <a href="https://aldosolisr.github.io/CYT/inglesprimeros.html" target="_blank"><div class="item">Inglés</div></a>
-            <a href="https://aldosolisr.github.io/CYT/inglesprimeros.html" target="_blank"><div class="item">Inglés</div></a>
-            <a href="https://aldosolisr.github.io/CYT/inglesprimeros.html" target="_blank"><div class="item">Inglés</div></a>
-            <a href="https://aldosolisr.github.io/CYT/inglesprimeros.html" target="_blank"><div class="item">Inglés</div></a>
-            <a href="https://zoom.us/j/96053694915?pwd=UjUvV2FvcWFyLzFZamFHM0FOR1pwZz09" target="_blank"><div class="item">Lectura</div></a>
+            <a href="https://aldosolisr.github.io/CYT/inglesprimeros.html" target="_blank"><div class="item hover ">Inglés</div></a>
+            <a href="https://aldosolisr.github.io/CYT/inglesprimeros.html" target="_blank"><div class="item hover">Inglés</div></a>
+            <a href="https://aldosolisr.github.io/CYT/inglesprimeros.html" target="_blank"><div class="item hover">Inglés</div></a>
+            <a href="https://aldosolisr.github.io/CYT/inglesprimeros.html" target="_blank"><div class="item hover">Inglés</div></a>
+            <a href="https://zoom.us/j/96053694915?pwd=UjUvV2FvcWFyLzFZamFHM0FOR1pwZz09" target="_blank"><div class="item hover">Lectura</div></a>
         </div>
         <div class="row odd">
             <div class="item">8:40-9:20</div>
-            <a href="https://zoom.us/j/91240387929?pwd=bnYvemVSU05qK0FKQU5NUmxMN2pYUT09" target="_blank"><div class="item">Matemáticas</div></a>
-            <a href="https://zoom.us/j/98597983548?pwd=K2FhZkFZd3hyMGdSMlR5Y01hVURpdz09" target="_blank"><div class="item">Sociales</div></a>
-            <a href="https://zoom.us/j/91240387929?pwd=bnYvemVSU05qK0FKQU5NUmxMN2pYUT09" target="_blank"><div class="item">Matemáticas</div></a>
-            <a href="https://zoom.us/j/91513380700?pwd=MjFxYmp0Qm51TlNwbTRhV0RzZ0d3Zz09" target="_blank"><div class="item">Redacción</div></a> 
-            <a href="https://zoom.us/j/98985086538?pwd=a3JJa3RicFFGNDE2YVpXbnVTTFF2Zz09" target="_blank"><div class="item">Física</div></a>
+            <a href="https://zoom.us/j/91240387929?pwd=bnYvemVSU05qK0FKQU5NUmxMN2pYUT09" target="_blank"><div class="item hover">Matemáticas</div></a>
+            <a href="https://zoom.us/j/98597983548?pwd=K2FhZkFZd3hyMGdSMlR5Y01hVURpdz09" target="_blank"><div class="item hover">Sociales</div></a>
+            <a href="https://zoom.us/j/91240387929?pwd=bnYvemVSU05qK0FKQU5NUmxMN2pYUT09" target="_blank"><div class="item hover">Matemáticas</div></a>
+            <a href="https://zoom.us/j/91513380700?pwd=MjFxYmp0Qm51TlNwbTRhV0RzZ0d3Zz09" target="_blank"><div class="item hover">Redacción</div></a> 
+            <a href="https://zoom.us/j/98985086538?pwd=a3JJa3RicFFGNDE2YVpXbnVTTFF2Zz09" target="_blank"><div class="item hover">Física</div></a>
         </div>
         <div class="row even">
             <div class="item">9:30-10:10</div>
-            <a href="https://zoom.us/j/91513380700?pwd=MjFxYmp0Qm51TlNwbTRhV0RzZ0d3Zz09" target="_blank"><div class="item">Redacción</div></a> 
-            <a href="https://zoom.us/j/91240387929?pwd=bnYvemVSU05qK0FKQU5NUmxMN2pYUT09" target="_blank"><div class="item">Matemáticas</div></a>
-            <a href="https://zoom.us/j/97039589188?pwd=VE5BZjdIRWhRMUhTeVVmV09kSlJCZz09" target="_blank"><div class="item">Química</div></a>
-            <a href="https://meet.google.com/gfq-qeiu-fsq?authuser=0" target="_blank"><div class="item">Experimentales</div></a>
-            <a href="https://zoom.us/j/91240387929?pwd=bnYvemVSU05qK0FKQU5NUmxMN2pYUT09" target="_blank"><div class="item">Matemáticas</div></a>
+            <a href="https://zoom.us/j/91513380700?pwd=MjFxYmp0Qm51TlNwbTRhV0RzZ0d3Zz09" target="_blank"><div class="item hover">Redacción</div></a> 
+            <a href="https://zoom.us/j/91240387929?pwd=bnYvemVSU05qK0FKQU5NUmxMN2pYUT09" target="_blank"><div class="item hover">Matemáticas</div></a>
+            <a href="https://zoom.us/j/97039589188?pwd=VE5BZjdIRWhRMUhTeVVmV09kSlJCZz09" target="_blank"><div class="item hover">Química</div></a>
+            <a href="https://meet.google.com/gfq-qeiu-fsq?authuser=0" target="_blank"><div class="item hover">Experimentales</div></a>
+            <a href="https://zoom.us/j/91240387929?pwd=bnYvemVSU05qK0FKQU5NUmxMN2pYUT09" target="_blank"><div class="item hover">Matemáticas</div></a>
         </div>
         <div class="row odd">
             <a href="https://www.youtube.com/watch?v=o-YBDTqX_ZU" target="_blank" class="receso"><div class="separate">Receso</div></a>
         </div>
         <div class="row even">
             <div class="item">10:50-11:30</div>
-            <a href="https://meet.google.com/gfq-qeiu-fsq?authuser=0" target="_blank"><div class="item">Experimentales</div></a>
-            <a href="https://meet.google.com/gfq-qeiu-fsq?authuser=0" target="_blank"><div class="item">Experimentales</div></a>
-            <a href="https://meet.google.com/yzo-exnj-vyg?authuser=0" target="_blank"><div class="item">Informática</div></a>
-            <a href="https://zoom.us/j/98597983548?pwd=K2FhZkFZd3hyMGdSMlR5Y01hVURpdz09" target="_blank"><div class="item">Sociales</div></a>
-            <a href="https://zoom.us/j/97720900352?pwd=M3M4dzZLSWxRVnhNNklBV2NOZHVFUT09" target="_blank"><div class="item">O. Vida</div></a>
+            <a href="https://meet.google.com/gfq-qeiu-fsq?authuser=0" target="_blank"><div class="item hover">Experimentales</div></a>
+            <a href="https://meet.google.com/gfq-qeiu-fsq?authuser=0" target="_blank"><div class="item hover">Experimentales</div></a>
+            <a href="https://meet.google.com/yzo-exnj-vyg?authuser=0" target="_blank"><div class="item hover">Informática</div></a>
+            <a href="https://zoom.us/j/98597983548?pwd=K2FhZkFZd3hyMGdSMlR5Y01hVURpdz09" target="_blank"><div class="item hover">Sociales</div></a>
+            <a href="https://zoom.us/j/97720900352?pwd=M3M4dzZLSWxRVnhNNklBV2NOZHVFUT09" target="_blank"><div class="item hover">O. Vida</div></a>
         </div>
         <div class="row odd">
             <div class="item">11:40-12:20</div>
-            <a href="https://zoom.us/j/97039589188?pwd=VE5BZjdIRWhRMUhTeVVmV09kSlJCZz09" target="_blank"><div class="item">Química</div></a>
-            <a href="https://us04web.zoom.us/j/4256599767?pwd=bUliR20yK2hFdVd3YWRBTFdNU1lDUT09" target="_blank"><div class="item">Culturales</div></a>
-            <a href="https://zoom.us/j/96053694915?pwd=UjUvV2FvcWFyLzFZamFHM0FOR1pwZz09" target="_blank"><div class="item">Lectura</div></a>
-            <a href="https://us04web.zoom.us/j/4256599767?pwd=bUliR20yK2hFdVd3YWRBTFdNU1lDUT09" target="_blank"><div class="item">Culturales</div></a> 
-            <a href="https://meet.google.com/fky-dzvd-qms?authuser=0" target="_blank"><div class="item">Filosofía</div></a>
+            <a href="https://zoom.us/j/97039589188?pwd=VE5BZjdIRWhRMUhTeVVmV09kSlJCZz09" target="_blank"><div class="item hover">Química</div></a>
+            <a href="https://us04web.zoom.us/j/4256599767?pwd=bUliR20yK2hFdVd3YWRBTFdNU1lDUT09" target="_blank"><div class="item hover">Culturales</div></a>
+            <a href="https://zoom.us/j/96053694915?pwd=UjUvV2FvcWFyLzFZamFHM0FOR1pwZz09" target="_blank"><div class="item hover">Lectura</div></a>
+            <a href="https://us04web.zoom.us/j/4256599767?pwd=bUliR20yK2hFdVd3YWRBTFdNU1lDUT09" target="_blank"><div class="item hover">Culturales</div></a> 
+            <a href="https://meet.google.com/fky-dzvd-qms?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
         </div>
         <div class="row even">
             <div class="item">12:30-13:10</div>
-            <a href="https://zoom.us/j/98985086538?pwd=a3JJa3RicFFGNDE2YVpXbnVTTFF2Zz09" target="_blank"><div class="item">Física</div></a>
-            <a href="https://zoom.us/j/91513380700?pwd=MjFxYmp0Qm51TlNwbTRhV0RzZ0d3Zz09" target="_blank"><div class="item">Redacción</div></a> 
-            <a href="https://meet.google.com/yme-ergr-npb?authuser=0" target="_blank"><div class="item">O. Edu</div></a>
-            <a href="https://meet.google.com/fky-dzvd-qms?authuser=0" target="_blank"><div class="item">Filosofía</div></a>
-            <a href="https://meet.google.com/yme-ergr-npb?authuser=0" target="_blank"><div class="item">O. Edu</div></a>
+            <a href="https://zoom.us/j/98985086538?pwd=a3JJa3RicFFGNDE2YVpXbnVTTFF2Zz09" target="_blank"><div class="item hover">Física</div></a>
+            <a href="https://zoom.us/j/91513380700?pwd=MjFxYmp0Qm51TlNwbTRhV0RzZ0d3Zz09" target="_blank"><div class="item hover">Redacción</div></a> 
+            <a href="https://meet.google.com/yme-ergr-npb?authuser=0" target="_blank"><div class="item hover">O. Edu</div></a>
+            <a href="https://meet.google.com/fky-dzvd-qms?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
+            <a href="https://meet.google.com/yme-ergr-npb?authuser=0" target="_blank"><div class="item hover">O. Edu</div></a>
         </div>
         <div class="row odd">
             <div class="item">13:20-14:10</div>
-            <a href="https://meet.google.com/yzo-exnj-vyg?authuser=0" target="_blank"><div class="item">Informática</div></a>
-            <a href="https://meet.google.com/fky-dzvd-qms?authuser=0" target="_blank"><div class="item">Filosofía</div></a>
-            <a href="https://meet.google.com/fky-dzvd-qms?authuser=0" target="_blank"><div class="item">Filosofía</div></a>
-            <a href="https://zoom.us/j/96053694915?pwd=UjUvV2FvcWFyLzFZamFHM0FOR1pwZz09" target="_blank"><div class="item">Lectura</div></a>
-            <a href="https://meet.google.com/yzo-exnj-vyg?authuser=0" target="_blank"><div class="item">Informática</div></a>
+            <a href="https://meet.google.com/yzo-exnj-vyg?authuser=0" target="_blank"><div class="item hover">Informática</div></a>
+            <a href="https://meet.google.com/fky-dzvd-qms?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
+            <a href="https://meet.google.com/fky-dzvd-qms?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
+            <a href="https://zoom.us/j/96053694915?pwd=UjUvV2FvcWFyLzFZamFHM0FOR1pwZz09" target="_blank"><div class="item hover">Lectura</div></a>
+            <a href="https://meet.google.com/yzo-exnj-vyg?authuser=0" target="_blank"><div class="item hover">Informática</div></a>
         </div>
         <script src="index.js"></script>
     </div>    
