--- a/químicos.html
+++ b/químicos.html
@@ -29,70 +29,70 @@
         </div>
         <div class="row odd">
             <div class="item">7:00-7:40</div>
-            <a href="https://zoom.us/j/93460637469?pwd=S1h1MkRYVDNlbitPblk5S0kvbVIxUT09" target="_blank"><div class="item">Matemáticas</div></a>
-            <a href="https://meet.google.com/lookup/hl6u7m2tub?authuser=0&hs=179" target="_blank"><div class="item">Ecología</div></a>
-            <a href="https://meet.google.com/txy-tikt-dtj?authuser=0&hs=179" target="_blank"><div class="item">Física</div></a>
-            <a href="https://meet.google.com/fcw-owkv-ekh?authuser=0&hs=179" target="_blank"><div class="item">Deportes</div></a>
-            <a href="https://meet.google.com/txy-tikt-dtj?authuser=0&hs=179" target="_blank"><div class="item">Física</div></a>
+            <a href="https://zoom.us/j/93460637469?pwd=S1h1MkRYVDNlbitPblk5S0kvbVIxUT09" target="_blank"><div class="item hover">Matemáticas</div></a>
+            <a href="https://meet.google.com/lookup/hl6u7m2tub?authuser=0&hs=179" target="_blank"><div class="item hover">Ecología</div></a>
+            <a href="https://meet.google.com/txy-tikt-dtj?authuser=0&hs=179" target="_blank"><div class="item hover">Física</div></a>
+            <a href="https://meet.google.com/fcw-owkv-ekh?authuser=0&hs=179" target="_blank"><div class="item hover">Deportes</div></a>
+            <a href="https://meet.google.com/txy-tikt-dtj?authuser=0&hs=179" target="_blank"><div class="item hover">Física</div></a>
         </div>
         <div class="row even">
             <div class="item">7:50-8:30</div>
-            <a href="https://zoom.us/j/91874499728?pwd=WGVTcGs2eW83SGdsV0FwbnduVlpNZz09" target="_blank"><div class="item">Química</div></a>
-            <a href="https://zoom.us/j/91874499728?pwd=WGVTcGs2eW83SGdsV0FwbnduVlpNZz09" target="_blank"><div class="item">Química</div></a>
-            <a href="https://zoom.us/j/91874499728?pwd=WGVTcGs2eW83SGdsV0FwbnduVlpNZz09" target="_blank"><div class="item">Química</div></a>
-            <a href="https://zoom.us/j/91874499728?pwd=WGVTcGs2eW83SGdsV0FwbnduVlpNZz09" target="_blank"><div class="item">Química</div></a>
-            <a href="https://meet.google.com/lookup/hp7l5umu5d?authuser=0&hs=179" target="_blank"><div class="item">O. Vida</div></a>
+            <a href="https://zoom.us/j/91874499728?pwd=WGVTcGs2eW83SGdsV0FwbnduVlpNZz09" target="_blank"><div class="item hover">Química</div></a>
+            <a href="https://zoom.us/j/91874499728?pwd=WGVTcGs2eW83SGdsV0FwbnduVlpNZz09" target="_blank"><div class="item hover">Química</div></a>
+            <a href="https://zoom.us/j/91874499728?pwd=WGVTcGs2eW83SGdsV0FwbnduVlpNZz09" target="_blank"><div class="item hover">Química</div></a>
+            <a href="https://zoom.us/j/91874499728?pwd=WGVTcGs2eW83SGdsV0FwbnduVlpNZz09" target="_blank"><div class="item hover">Química</div></a>
+            <a href="https://meet.google.com/lookup/hp7l5umu5d?authuser=0&hs=179" target="_blank"><div class="item hover">O. Vida</div></a>
         </div>
         <div class="row odd">
             <div class="item">8:40-9:20</div>
-            <a href="https://meet.google.com/txy-tikt-dtj?authuser=0&hs=179" target="_blank"><div class="item">Física</div></a>
-            <a href="https://zoom.us/j/98670115802?pwd=dFRrbW9xR0o2TjhVTU5sckF0RzlnUT09" target="_blank"><div class="item">Estadística</div></a>
-            <a href="https://zoom.us/j/98670115802?pwd=dFRrbW9xR0o2TjhVTU5sckF0RzlnUT09" target="_blank"><div class="item">Estadística</div></a>
-            <a href="https://meet.google.com/txy-tikt-dtj?authuser=0&hs=179" target="_blank"><div class="item">Física</div></a>
-            <a href="https://meet.google.com/fcw-owkv-ekh?authuser=0&hs=179" target="_blank"><div class="item">Deportes</div></a>
+            <a href="https://meet.google.com/txy-tikt-dtj?authuser=0&hs=179" target="_blank"><div class="item hover">Física</div></a>
+            <a href="https://zoom.us/j/98670115802?pwd=dFRrbW9xR0o2TjhVTU5sckF0RzlnUT09" target="_blank"><div class="item hover">Estadística</div></a>
+            <a href="https://zoom.us/j/98670115802?pwd=dFRrbW9xR0o2TjhVTU5sckF0RzlnUT09" target="_blank"><div class="item hover">Estadística</div></a>
+            <a href="https://meet.google.com/txy-tikt-dtj?authuser=0&hs=179" target="_blank"><div class="item hover">Física</div></a>
+            <a href="https://meet.google.com/fcw-owkv-ekh?authuser=0&hs=179" target="_blank"><div class="item hover">Deportes</div></a>
         </div>
         <div class="row even">
             <div class="item">9:30-10:10</div>
-            <a href="https://aldosolisr.github.io/CYT/ingles.html" target="_blank"><div class="item">Inglés</div></a>
-            <a href="https://aldosolisr.github.io/CYT/ingles.html" target="_blank"><div class="item">Inglés</div></a>
-            <a href="https://meet.google.com/lookup/hl6u7m2tub?authuser=0&hs=179" target="_blank"><div class="item">Ecología</div></a>
-            <a href="https://meet.google.com/jud-ysdw-mpo?authuser=0&hs=179" target="_blank"><div class="item">O. Edu</div></a>
-            <a href="https://zoom.us/j/98670115802?pwd=dFRrbW9xR0o2TjhVTU5sckF0RzlnUT09" target="_blank"><div class="item">Estadística</div></a>
+            <a href="https://aldosolisr.github.io/CYT/ingles.html" target="_blank"><div class="item hover">Inglés</div></a>
+            <a href="https://aldosolisr.github.io/CYT/ingles.html" target="_blank"><div class="item hover">Inglés</div></a>
+            <a href="https://meet.google.com/lookup/hl6u7m2tub?authuser=0&hs=179" target="_blank"><div class="item hover">Ecología</div></a>
+            <a href="https://meet.google.com/jud-ysdw-mpo?authuser=0&hs=179" target="_blank"><div class="item hover">O. Edu</div></a>
+            <a href="https://zoom.us/j/98670115802?pwd=dFRrbW9xR0o2TjhVTU5sckF0RzlnUT09" target="_blank"><div class="item hover">Estadística</div></a>
         </div>
         <div class="row odd">
             <a href="https://www.youtube.com/watch?v=o-YBDTqX_ZU" target="_blank" class="receso"><div class="separate">Receso</div></a>
         </div>
         <div class="row even">
             <div class="item">10:50-11:30</div>
-            <a href="https://meet.google.com/pcg-ikhq-fph?authuser=0&hs=179" target="_blank"><div class="item">Psicología</div></a>
-            <a href="https://zoom.us/j/93460637469?pwd=S1h1MkRYVDNlbitPblk5S0kvbVIxUT09" target="_blank"><div class="item">Matemáticas</div></a>
-            <a href="https://meet.google.com/pcg-ikhq-fph?authuser=0&hs=179" target="_blank"><div class="item">Psicología</div></a>
-            <a href="https://meet.google.com/lookup/hl6u7m2tub?authuser=0&hs=179" target="_blank"><div class="item">Ecología</div></a>
-            <a href="https://meet.google.com/pcg-ikhq-fph?authuser=0&hs=179" target="_blank"><div class="item">Psicología</div></a>
+            <a href="https://meet.google.com/pcg-ikhq-fph?authuser=0&hs=179" target="_blank"><div class="item hover">Psicología</div></a>
+            <a href="https://zoom.us/j/93460637469?pwd=S1h1MkRYVDNlbitPblk5S0kvbVIxUT09" target="_blank"><div class="item hover">Matemáticas</div></a>
+            <a href="https://meet.google.com/pcg-ikhq-fph?authuser=0&hs=179" target="_blank"><div class="item hover">Psicología</div></a>
+            <a href="https://meet.google.com/lookup/hl6u7m2tub?authuser=0&hs=179" target="_blank"><div class="item hover">Ecología</div></a>
+            <a href="https://meet.google.com/pcg-ikhq-fph?authuser=0&hs=179" target="_blank"><div class="item hover">Psicología</div></a>
         </div>
         <div class="row odd">
             <div class="item">11:40-12:20</div>
-            <a href="https://meet.google.com/lookup/hp7l5umu5d?authuser=0&hs=179" target="_blank"><div class="item">O. Vida</div></a>
-            <a href="https://meet.google.com/txy-tikt-dtj?authuser=0&hs=179" target="_blank"><div class="item">Física</div></a>
-            <a href="https://zoom.us/j/92683987860?pwd=UjRPMkN4Vnc2cGxXeFVCeXpJbGNYdz09" target="_blank"><div class="item">C. Salud</div></a>
-            <a href="https://zoom.us/j/93460637469?pwd=S1h1MkRYVDNlbitPblk5S0kvbVIxUT09" target="_blank"><div class="item">Matemáticas</div></a> 
-            <a href="https://zoom.us/j/91874499728?pwd=WGVTcGs2eW83SGdsV0FwbnduVlpNZz09" target="_blank"><div class="item">Química</div></a>
+            <a href="https://meet.google.com/lookup/hp7l5umu5d?authuser=0&hs=179" target="_blank"><div class="item hover">O. Vida</div></a>
+            <a href="https://meet.google.com/txy-tikt-dtj?authuser=0&hs=179" target="_blank"><div class="item hover">Física</div></a>
+            <a href="https://zoom.us/j/92683987860?pwd=UjRPMkN4Vnc2cGxXeFVCeXpJbGNYdz09" target="_blank"><div class="item hover">C. Salud</div></a>
+            <a href="https://zoom.us/j/93460637469?pwd=S1h1MkRYVDNlbitPblk5S0kvbVIxUT09" target="_blank"><div class="item hover">Matemáticas</div></a> 
+            <a href="https://zoom.us/j/91874499728?pwd=WGVTcGs2eW83SGdsV0FwbnduVlpNZz09" target="_blank"><div class="item hover">Química</div></a>
         </div>
         <div class="row even">
             <div class="item">12:30-13:10</div>
-            <a href="https://zoom.us/j/92683987860?pwd=UjRPMkN4Vnc2cGxXeFVCeXpJbGNYdz09" target="_blank"><div class="item">C. Salud</div></a>
-            <a href="https://zoom.us/j/92683987860?pwd=UjRPMkN4Vnc2cGxXeFVCeXpJbGNYdz09" target="_blank"><div class="item">C. Salud</div></a> 
-            <a href="https://zoom.us/j/97090241705?pwd=WXVqMHBaV2I5aXMxT2QrSEhhU3lYZz09" target="_blank"><div class="item">Biología</div></a>
-            <a href="https://zoom.us/j/92683987860?pwd=UjRPMkN4Vnc2cGxXeFVCeXpJbGNYdz09" target="_blank"><div class="item">C. Salud</div></a>
-            <a href="https://zoom.us/j/93460637469?pwd=S1h1MkRYVDNlbitPblk5S0kvbVIxUT09" target="_blank"><div class="item">Matemáticas</div></a>
+            <a href="https://zoom.us/j/92683987860?pwd=UjRPMkN4Vnc2cGxXeFVCeXpJbGNYdz09" target="_blank"><div class="item hover">C. Salud</div></a>
+            <a href="https://zoom.us/j/92683987860?pwd=UjRPMkN4Vnc2cGxXeFVCeXpJbGNYdz09" target="_blank"><div class="item hover">C. Salud</div></a> 
+            <a href="https://zoom.us/j/97090241705?pwd=WXVqMHBaV2I5aXMxT2QrSEhhU3lYZz09" target="_blank"><div class="item hover">Biología</div></a>
+            <a href="https://zoom.us/j/92683987860?pwd=UjRPMkN4Vnc2cGxXeFVCeXpJbGNYdz09" target="_blank"><div class="item hover">C. Salud</div></a>
+            <a href="https://zoom.us/j/93460637469?pwd=S1h1MkRYVDNlbitPblk5S0kvbVIxUT09" target="_blank"><div class="item hover">Matemáticas</div></a>
         </div>
         <div class="row odd">
             <div class="item">13:20-14:10</div>
-            <a href="https://zoom.us/j/97090241705?pwd=WXVqMHBaV2I5aXMxT2QrSEhhU3lYZz09" target="_blank"><div class="item">Biología</div></a>
-            <a href="https://zoom.us/j/97090241705?pwd=WXVqMHBaV2I5aXMxT2QrSEhhU3lYZz09" target="_blank"><div class="item">Biología</div></a>
-            <a href="https://zoom.us/j/93460637469?pwd=S1h1MkRYVDNlbitPblk5S0kvbVIxUT09" target="_blank"><div class="item">Matemáticas</div></a>
-            <a href="https://zoom.us/j/97090241705?pwd=WXVqMHBaV2I5aXMxT2QrSEhhU3lYZz09" target="_blank"><div class="item">Biología</div></a>
-            <a href="https://zoom.us/j/97090241705?pwd=WXVqMHBaV2I5aXMxT2QrSEhhU3lYZz09" target="_blank"><div class="item">Biología</div></a>
+            <a href="https://zoom.us/j/97090241705?pwd=WXVqMHBaV2I5aXMxT2QrSEhhU3lYZz09" target="_blank"><div class="item hover">Biología</div></a>
+            <a href="https://zoom.us/j/97090241705?pwd=WXVqMHBaV2I5aXMxT2QrSEhhU3lYZz09" target="_blank"><div class="item hover">Biología</div></a>
+            <a href="https://zoom.us/j/93460637469?pwd=S1h1MkRYVDNlbitPblk5S0kvbVIxUT09" target="_blank"><div class="item hover">Matemáticas</div></a>
+            <a href="https://zoom.us/j/97090241705?pwd=WXVqMHBaV2I5aXMxT2QrSEhhU3lYZz09" target="_blank"><div class="item hover">Biología</div></a>
+            <a href="https://zoom.us/j/97090241705?pwd=WXVqMHBaV2I5aXMxT2QrSEhhU3lYZz09" target="_blank"><div class="item hover">Biología</div></a>
         </div>
         <script src="index.js"></script>
     </div>    
