--- a/sociales.html
+++ b/sociales.html
@@ -59,7 +59,7 @@
             <a href="https://us04web.zoom.us/j/78124564052?pwd=bHdiYzFlcUtadXZPZzFZbXVRN0pzUT09" target="_blank"><div class="item hover">Derecho</div></a>
         </div>
         <div class="row odd">
-            <a href="" target="_blank" class="receso"><div class="separate">Receso</div></a>
+            <a href="https://www.youtube.com/watch?v=o-YBDTqX_ZU" target="_blank" class="receso"><div class="separate">Receso</div></a>
         </div>
         <div class="row even">
             <div class="item">10:50-11:30</div>
