--- a/ingles.html
+++ b/ingles.html
@@ -16,7 +16,7 @@
     <div></div>
         <a href="https://us04web.zoom.us/j/73369271003?pwd=RzUvdEc3bU5kS2FGTkRWazVwdDBBZz09" target="_blank"><div class="item">BÁSICOS</div></a>
         
-        <a href="https://meet.google.com/dhy-kayn-akt" target="_blank"><div class="item1">INTERMEDIOS</div></a>
+        <a href="https://meet.google.com/wiw-dagy-nvs?authuser=5&hs=179" target="_blank"><div class="item1">INTERMEDIOS</div></a>
 
         <a href="https://zoom.us/j/94515322252?pwd=V1paYWJBcDdzNGJXUjN3dWN6RFVNZz09" target="_blank"><div class="item2">AVANZADOS</div></a>
     </div>
