--- a/primerob.html
+++ b/primerob.html
@@ -76,21 +76,21 @@
             <a href="https://us04web.zoom.us/j/4256599767?pwd=bUliR20yK2hFdVd3YWRBTFdNU1lDUT09" target="_blank"><div class="item hover">Culturales</div></a>
             <a href="https://zoom.us/j/96053694915?pwd=UjUvV2FvcWFyLzFZamFHM0FOR1pwZz09" target="_blank"><div class="item hover">Lectura</div></a>
             <a href="https://us04web.zoom.us/j/4256599767?pwd=bUliR20yK2hFdVd3YWRBTFdNU1lDUT09" target="_blank"><div class="item hover">Culturales</div></a> 
-            <a href="https://meet.google.com/fky-dzvd-qms?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
+            <a href="https://meet.google.com/oyf-tbmb-oca?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
         </div>
         <div class="row even">
             <div class="item">12:30-13:10</div>
             <a href="https://zoom.us/j/98985086538?pwd=a3JJa3RicFFGNDE2YVpXbnVTTFF2Zz09" target="_blank"><div class="item hover">Física</div></a>
             <a href="https://zoom.us/j/91513380700?pwd=MjFxYmp0Qm51TlNwbTRhV0RzZ0d3Zz09" target="_blank"><div class="item hover">Redacción</div></a> 
             <a href="https://meet.google.com/yme-ergr-npb?authuser=0" target="_blank"><div class="item hover">O. Edu</div></a>
-            <a href="https://meet.google.com/fky-dzvd-qms?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
+            <a href="https://meet.google.com/oyf-tbmb-oca?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
             <a href="https://meet.google.com/yme-ergr-npb?authuser=0" target="_blank"><div class="item hover">O. Edu</div></a>
         </div>
         <div class="row odd">
             <div class="item">13:20-14:10</div>
             <a href="https://meet.google.com/yzo-exnj-vyg?authuser=0" target="_blank"><div class="item hover">Informática</div></a>
-            <a href="https://meet.google.com/fky-dzvd-qms?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
-            <a href="https://meet.google.com/fky-dzvd-qms?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
+            <a href="https://meet.google.com/oyf-tbmb-oca?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
+            <a href="https://meet.google.com/oyf-tbmb-oca?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
             <a href="https://zoom.us/j/96053694915?pwd=UjUvV2FvcWFyLzFZamFHM0FOR1pwZz09" target="_blank"><div class="item hover">Lectura</div></a>
             <a href="https://meet.google.com/yzo-exnj-vyg?authuser=0" target="_blank"><div class="item hover">Informática</div></a>
         </div>
