--- a/primerob.html
+++ b/primerob.html
@@ -96,17 +96,17 @@
         </div>
         <script src="index.js"></script>
     </div>    
-    <br><br>
+    <span ><a href="https://aldosolisr.github.io/CYT/javifacha.jpeg" target="_blank"> javi</a></span>
     <footer>
         <div class="mio">
             <div class="diosito">
                 <p class="powered">powered by</p>
                 <p>Físicos Matemáticos</p> 
             </div>
-            <p>Luis Dardón #6</p>
-            <p>Kenji García #7</p>
+            <p><a href="" target="_blank"> Luis Dardón #6</a></p>
+            <p><a href="https://aldosolisr.github.io/CYT/kenji.png" target="_blank">Kenji García #7</a></p>
             <p>Javier Sánchez #23</p>
-            <p>Aldo Solís #24</p>
+            <p><a href="">Aldo Solís #24</a></p>
         </div>
     </footer>
 </body>
