--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <p><a href="" target="_blank"> Luis Dardón #6</a></p>
             <p><a href="https://aldosolisr.github.io/CYT/kenji.png" target="_blank">Kenji García #7</a></p>
             <p>Javier Sánchez #23</p>
-            <p><a href="">Aldo Solís #24</a></p>
+            <p><a href="https://youtu.be/0CFbVDqtsPQ" target="_blank">Aldo Solís #24</a></p>
         </div>
     </footer>
 </body>
