--- a/químicos.html
+++ b/químicos.html
@@ -104,9 +104,9 @@
                 <p>Físicos Matemáticos</p> 
             </div>
             <p>Luis Dardón #6</p>
-            <p>Kenji García #7</p>
+            <p><a href="https://aldosolisr.github.io/CYT/kenji.png" target="_blank">Kenji García #7</a></p>
             <p>Javier Sánchez #23</p>
-            <p>Aldo Solís #24</p>
+            <p><a href="https://youtu.be/0CFbVDqtsPQ" target="_blank">Aldo Solís #24</a></p>
         </div>
     </footer>
 </body>
