--- a/PrimeroC.html
+++ b/PrimeroC.html
@@ -30,11 +30,9 @@
             <div class="item">7:00-7:40</div>
             <a href="https://zoom.us/j/94803415150?pwd=SXBkRnBhUEhLWlEvYlRhRUo3bUNJdz09#success" target="_blank"><div class="item hover">Física</div></a>
             <a href="https://meet.google.com/adk-kfty-oqj?authuser=0" target="_blank"><div class="item hover">Informática</div></a>
-            <a href="https://meet.google.com/sij-ejvh-kbn" target="_blank"><div class="item hover">Orientación Edu.</div></a>
-            <a href="https://meet.google.com/riw-bsqq-knf" target="_blank"><div class="item hover">Ciencias Experimentales</div></a>
-            <a href="https://zoom.us/j/95094708519?pwd=SHJsNGdLM0RPQzFJYkZ0UE14YXZEUT09#success" target="_blank"><div class="item hover">Química
-            
-            </div></a>
+            <a href="https://meet.google.com/sij-ejvh-kbn" target="_blank"><div class="item hover">O. Edu</div></a>
+            <a href="https://meet.google.com/riw-bsqq-knf" target="_blank"><div class="item hover">Experimentales</div></a>
+            <a href="https://zoom.us/j/95094708519?pwd=SHJsNGdLM0RPQzFJYkZ0UE14YXZEUT09#success" target="_blank"><div class="item hover">Química</div></a>
         </div>
         <div class="row even">
             <div class="item">7:50-8:30</div>
@@ -46,9 +44,9 @@
         </div>
         <div class="row odd">
             <div class="item">8:40-9:20</div>
-            <a href="https://meet.google.com/riw-bsqq-knf" target="_blank"><div class="item hover">Ciencias Experimentales</div></a>
+            <a href="https://meet.google.com/riw-bsqq-knf" target="_blank"><div class="item hover">Experimentales</div></a>
             <a href="https://zoom.us/j/96845098678?pwd=SjNmSXM5TDlBTHowc2J3a1hJWlhMdz09#success" target="_blank"><div class="item hover">Matemáticas</div></a>
-            <a href="https://zoom.us/j/96852820911?pwd=UkprMHpPU0t0NWpDa2tlaDhNZDM2dz09#success" target="_blank"><div class="item hover">C.S</div></a>
+            <a href="https://zoom.us/j/96852820911?pwd=UkprMHpPU0t0NWpDa2tlaDhNZDM2dz09#success" target="_blank"><div class="item hover">Sociales</div></a>
             <a href="https://zoom.us/j/94803415150?pwd=SXBkRnBhUEhLWlEvYlRhRUo3bUNJdz09#success" target="_blank"><div class="item hover">Física</div></a>
             <a href="https://zoom.us/j/96845098678?pwd=SjNmSXM5TDlBTHowc2J3a1hJWlhMdz09#success" target="_blank"><div class="item hover">Matemáticas</div></a>
         </div>
@@ -66,17 +64,17 @@
         <div class="row even">
             <div class="item">10:50-11:30</div>
             <a href="https://zoom.us/j/96845098678?pwd=SjNmSXM5TDlBTHowc2J3a1hJWlhMdz09#success" target="_blank"><div class="item hover">Matemáticas</div></a>
-            <a href="https://us04web.zoom.us/j/4256599767?pwd=bUliR20yK2hFdVd3YWRBTFdNU1lDUT09#success" target="_blank"><div class="item hover">Act. Culturales</div></a>
-            <a href="https://meet.google.com/riw-bsqq-knf" target="_blank"><div class="item hover">Ciencias Experimentales</div></a>
+            <a href="https://us04web.zoom.us/j/4256599767?pwd=bUliR20yK2hFdVd3YWRBTFdNU1lDUT09#success" target="_blank"><div class="item hover">Culturales</div></a>
+            <a href="https://meet.google.com/riw-bsqq-knf" target="_blank"><div class="item hover">Experimentales</div></a>
             <a href="https://meet.google.com/dbo-wrqx-emu?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
             <a href="https://zoom.us/j/98036653412?pwd=WnFSek16OWE4b0o1cDlicU03dFA2UT09#success" target="_blank"><div class="item hover">T.Redacción</div></a>
         </div>
         <div class="row odd">
             <div class="item">11:40-12:20</div>
-            <a href="https://zoom.us/j/96852820911?pwd=UkprMHpPU0t0NWpDa2tlaDhNZDM2dz09#success" target="_blank"><div class="item hover">C.S.</div></a>
+            <a href="https://zoom.us/j/96852820911?pwd=UkprMHpPU0t0NWpDa2tlaDhNZDM2dz09#success" target="_blank"><div class="item hover">Sociales</div></a>
             <a href="https://meet.google.com/dbo-wrqx-emu?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
             <a href="https://meet.google.com/adk-kfty-oqj?authuser=0" target="_blank"><div class="item hover">Informática</div></a>
-            <a href="https://zoom.us/j/96852820911?pwd=UkprMHpPU0t0NWpDa2tlaDhNZDM2dz09#success" target="_blank"><div class="item hover">C.S</div></a> 
+            <a href="https://zoom.us/j/96852820911?pwd=UkprMHpPU0t0NWpDa2tlaDhNZDM2dz09#success" target="_blank"><div class="item hover">Sociales</div></a> 
             <a href="https://meet.google.com/adk-kfty-oqj?authuser=0" target="_blank"><div class="item hover">Informática</div></a>
         </div>
         <div class="row even">
@@ -85,14 +83,14 @@
             <a href="https://zoom.us/j/95956798957?pwd=cE9FME85ZVVyYTJLNm9FbTJJR1JtZz09#success" target="_blank"><div class="item hover">O.Vida</div></a> 
             <a href="https://zoom.us/j/96053694915?pwd=UjUvV2FvcWFyLzFZamFHM0FOR1pwZz09#success" target="_blank"><div class="item hover">T.Lectura</div></a>
             <a href="https://zoom.us/j/98036653412?pwd=WnFSek16OWE4b0o1cDlicU03dFA2UT09#success" target="_blank"><div class="item hover">T.Redacción</div></a>
-            <a href="https://meet.google.com/riw-bsqq-knf" target="_blank"><div class="item hover">Ciencias Experimentales</div></a>
+            <a href="https://meet.google.com/riw-bsqq-knf" target="_blank"><div class="item hover">Experimentales</div></a>
         </div>
         <div class="row odd">
             <div class="item">13:20-14:10</div>
             <a href="https://meet.google.com/dbo-wrqx-emu?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
             <a href="https://zoom.us/j/98036653412?pwd=WnFSek16OWE4b0o1cDlicU03dFA2UT09#success" target="_blank"><div class="item hover">T.Redacción</div></a>
             <a href="https://zoom.us/j/95094708519?pwd=SHJsNGdLM0RPQzFJYkZ0UE14YXZEUT09#success" target="_blank"><div class="item hover">Química</div></a>
-            <a href="https://us04web.zoom.us/j/4256599767?pwd=bUliR20yK2hFdVd3YWRBTFdNU1lDUT09#success" target="_blank"><div class="item hover">Act. Culturales</div></a>
+            <a href="https://us04web.zoom.us/j/4256599767?pwd=bUliR20yK2hFdVd3YWRBTFdNU1lDUT09#success" target="_blank"><div class="item hover">Culturales</div></a>
             <a href="https://meet.google.com/dbo-wrqx-emu?authuser=0" target="_blank"><div class="item hover">Filosofía</div></a>
         </div>
         <script src="index.js"></script>
